# shared-services

./: README.md  pyproject.toml
shared_services/: __init__.py
shared_services.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
shared_services/company_detection/: __init__.py  detector.py
shared_services/email/: __init__.py  email_templates.py  resend_service.py
shared_services/supabase_auth/: __init__.py  magic_link.py  magic_link_old.py
